--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
             "pwd": "asd123"
         },
         "imageBaseUrl": "http://192.168.10.222:8080/static/face/",
-        "apiBase": "/bdc/be/api/",
+        "apiBase": "/sfr/be/api/",
 				"realTimeRefresh": true
     },
     "EvanXYHu": {
@@ -17,7 +17,7 @@
             "pwd": ""
         },
         "imageBaseUrl": "/static/face/",
-        "apiBase": "/bdc/be/testing-api/",
+        "apiBase": "/sfr/be/testing-api/",
 				"realTimeRefresh": false
     }
 }
